# chartchotic

./: .gitignore  .gitmodules  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  build-reapertest.sh  build.sh  test.sh
.ci/: windows-installer.iss
.ci/juce-patches/: README.md
.github/workflows/: README.md  build.yml  release-beta.yml  release-dev.yml  release.yml
.planning/: 1.2.3-hotfix.md  PERF_FIXES.md  PLAN.md  shared-track-cache.md  vector-asset-pipeline.md
ChartPreview/: ChartPreview.jucer
ChartPreview/Assets/midi/: akroasis.mid  everything_went_black.mid  further_side.mid  scarlet.mid  sleepy_tea.mid  stress.mid  test.mid
ChartPreview/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  UpdateChecker.cpp  UpdateChecker.h
ChartPreview/Source/DebugTools/: DebugChartGenerator.h  DebugEditorController.cpp  DebugEditorController.h  DebugMidiFilePlayer.h  DebugPlaybackController.h  DebugToolbarPanel.cpp  DebugToolbarPanel.h  DebugTuningPanel.cpp  DebugTuningPanel.h
ChartPreview/Source/REAPER/: TrackInfoListener.cpp
ChartPreview/Source/UI/: ChartPreviewLookAndFeel.cpp  ChartPreviewLookAndFeel.h  ChartchoticLogo.h  PopupMenuButton.h  SectionHeader.h  Theme.h  ToolbarComponent.cpp  ToolbarComponent.h  ToolbarPanelGroup.h  UpdateBannerComponent.h
ChartPreview/Source/UI/Controls/: CircleIconSelector.h  PanelSectionHeader.h  PillToggle.h  PopupMenuButton.h  SegmentedButtons.h  ValueStepper.h
ChartPreview/Source/UI/LookAndFeel/: ChartPreviewLookAndFeel.cpp  ChartPreviewLookAndFeel.h
ChartPreview/Source/Utils/: Utils.h
ChartPreview/Source/Visual/Managers/: AnimationManager.h  AssetManager.cpp  AssetManager.h
ChartPreview/Source/Visual/Renderers/: AnimationRenderer.cpp  AnimationRenderer.h  GlyphRenderer.cpp  GlyphRenderer.h  GridlineRenderer.cpp  GridlineRenderer.h  HighwayRenderer.cpp  HighwayRenderer.h  HighwayTextureRenderer.cpp  HighwayTextureRenderer.h  NoteRenderer.cpp  NoteRenderer.h  SceneRenderer.cpp  SceneRenderer.h  SustainRenderer.cpp  SustainRenderer.h  TrackFade.h  TrackRenderer.cpp  TrackRenderer.h
ChartPreview/Source/Visual/Utils/: DrawingConstants.h  LatencySmoother.h  PositionConstants.h  PositionMath.cpp  PositionMath.h  RenderTiming.h
Chartchotic/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UpdateChecker.h
Chartchotic/Source/DebugTools/: DataGenerators.h  DebugEditorController.cpp  DebugEditorController.h  DebugMidiFilePlayer.h  DebugPlaybackController.h  DebugToolbarPanel.cpp  DebugToolbarPanel.h  DebugTuningPanel.cpp  DebugTuningPanel.h  FrameProfileLogger.h
Chartchotic/Source/Editor/: AssetController.cpp  AssetController.h  AuthoringControllerBase.h  AuthoringTypes.h  AuthoringUtils.h  CommandMapper.cpp  CommandMapper.h  EditController.cpp  EditController.h  FrameDataBuilder.cpp  FrameDataBuilder.h  InteractionController.cpp  InteractionController.h  NoteEditor.cpp  NoteEditor.h  SessionController.cpp  SessionController.h  WriteController.cpp  WriteController.h
Chartchotic/Source/Host/: ReaperIntegration.cpp  ReaperIntegration.h  ReaperTrackDetector.h  ReaperVST2Extensions.cpp  ReaperVST2Extensions.h  ReaperVST3Extensions.cpp  ReaperVST3Extensions.h  TrackInfoListener.cpp
Chartchotic/Source/Midi/: ChartTextEvent.h  DiscoFlipState.h  InstrumentSession.cpp  InstrumentSession.h  InstrumentSlot.h  MidiProject.h  MidiTrack.h
Chartchotic/Source/Midi/Discovery/: ManualDiscovery.h  ReaperGlobalDiscovery.h  ReaperLocalDiscovery.h  TrackDiscovery.h
Chartchotic/Source/Midi/Pipelines/: MidiPipelineFactory.cpp  MidiPipelineFactory.h  ReaperMidiPipeline.cpp  ReaperMidiPipeline.h
Chartchotic/Source/Midi/Processing/: DifficultyWindow.h  MidiInterpreter.cpp  MidiInterpreter.h  MidiProcessor.cpp  MidiProcessor.h  NoteProcessor.cpp  NoteProcessor.h  PartWindow.h  SharedTrackData.h  TrackResolver.cpp  TrackResolver.h
Chartchotic/Source/Midi/Providers/: MidiFileNoteProvider.h  MidiWriter.h  ReaperTrackNoteProvider.h  TrackNoteProvider.h
Chartchotic/Source/Midi/Utils/: GemCalculator.cpp  GemCalculator.h  InstrumentMapper.h  LaneDetector.cpp  MidiConstants.h  MidiTypes.h  TempoTimeSignatureEventHelper.h  TimeConverter.h
Chartchotic/Source/REAPER/: ReaperIntegration.cpp  ReaperIntegration.h  ReaperTrackDetector.cpp  ReaperVST3Extensions.cpp  TrackInfoListener.cpp  TrackInfoListener.h
Chartchotic/Source/UI/: ChartchoticLogo.h  ControlConstants.h  FooterComponent.h  HelpStripComponent.h  HelpTypes.h  MenuGroup.h  SectionHeader.h  StatusBarComponent.h  Theme.h  ToolbarComponent.cpp  ToolbarComponent.h  TooltipStrings.h  UpdateBannerComponent.h  UpdateChecker.cpp  UpdateChecker.h
Chartchotic/Source/UI/Controls/: CheckboxToggle.h  CircleIconSelector.h  InfoTooltip.h  PanelSectionHeader.h  PillToggle.h  PopupMenuButton.h  SegmentedButtons.h  SlideToggle.h  ValueStepper.h  WriteModeIcon.h  WriteModePill.h  WriteSubToolbar.h
Chartchotic/Source/Utils/: ChartTypes.h  TempoTimeSignatureEventHelper.h  Utils.h
Chartchotic/Source/Visual/: HighwayComponent.cpp  HighwayComponent.h  HighwaySlot.h  TrackImageCache.h
Chartchotic/Source/Visual/Managers/: AssetManager.cpp  (+3 more)
Chartchotic/releases/Chartchotic-vdev-macOS/: README.txt  install-macos.sh
docs/: KEY_COMMANDS.md  NOTE_COLLISION_RULES.md  REAPER_INTEGRATION.md  RENDERING_REFACTOR.md  SKINNING.md  TONE.md  WRITE_MODE.md  Z_POSITIONING.md
docs/superpowers/plans/: 2026-04-24-frame-rendering-plan.md
docs/superpowers/specs/: 2026-04-24-frame-rendering-refactor.md
scripts/: _common.sh  convert_assets.sh  inline-svg-styles.py  test.sh
tests/: conftest.py  requirements.txt
tests/benchmark/: CMakeLists.txt  bench_helpers.h  bench_main.cpp  bench_pipeline.cpp  bench_rendering.cpp  test_benchmark.py
tests/compliance/: test_compliance.py
tests/integration/: test_plugin_load.py
tests/unit/: CMakeLists.txt  test_chord_analyzer.cpp  test_frame.cpp  test_gem_calculator.cpp  test_gridline_generator.cpp  test_helpers.h  test_instrument_mapper.cpp  test_lane_detector.cpp  test_midi_interpreter.cpp  test_smoke.cpp  test_unit_runner.py
(+41 files in other folders)
